orchestrator/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
  labels:
    app: orchestrator
spec:
  ports:
    - port: 80
      name: orchestrator
      targetPort: 8080
  type: ClusterIP
  selector:
    app: orchestrator
